--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
         >
         <ul class="nav-header list">
           <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
           <li><a href="#" class="link">Контакти</a></li>
         </ul>
         <ul class="contacts-header list">
@@ -82,6 +82,13 @@
                 <img src="./images/portfolio/laptop.jpg" alt="Ноутбук" />
                 <h2 class="heading">Технокряк</h2>
                 <p>Веб-сайт</p>
+                <div class="portfolio-overlay">
+                  <p>
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
               </a>
             </li>
             <li>
@@ -92,6 +99,12 @@
                 />
                 <h2 class="heading">Постер New Orlean vs Golden Star</h2>
                 <p>Дизайн</p>
+                <div class="portfolio-overlay">
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Alias, sapiente!
+                  </p>
+                </div>
               </a>
             </li>
             <li>
@@ -102,6 +115,12 @@
                 />
                 <h2 class="heading">Ресторан Seafood</h2>
                 <p>Додаток</p>
+                <div class="portfolio-overlay">
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Alias, sapiente!
+                  </p>
+                </div>
               </a>
             </li>
             <li>
@@ -109,6 +128,12 @@
                 <img src="./images/portfolio/headphones.jpg" alt="Навушники" />
                 <h2 class="heading">Проєкт Prime</h2>
                 <p>Маркетинг</p>
+                <div class="portfolio-overlay">
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Alias, sapiente!
+                  </p>
+                </div>
               </a>
             </li>
             <li>
@@ -116,6 +141,12 @@
                 <img src="./images/portfolio/boxes.jpg" alt="Коробки" />
                 <h2 class="heading">Проєкт Boxes</h2>
                 <p>Додаток</p>
+                <div class="portfolio-overlay">
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Alias, sapiente!
+                  </p>
+                </div>
               </a>
             </li>
             <li>
@@ -123,6 +154,12 @@
                 <img src="./images/portfolio/monitor.jpg" alt="Монітор" />
                 <h2 class="heading">Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
+                <div class="portfolio-overlay">
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Alias, sapiente!
+                  </p>
+                </div>
               </a>
             </li>
             <li>
@@ -130,6 +167,12 @@
                 <img src="./images/portfolio/journal.jpg" alt="Журнал" />
                 <h2 class="heading">Видання Limited Edition</h2>
                 <p>Дизайн</p>
+                <div class="portfolio-overlay">
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Alias, sapiente!
+                  </p>
+                </div>
               </a>
             </li>
             <li>
@@ -137,6 +180,12 @@
                 <img src="./images/portfolio/label.jpg" alt="Бірка" />
                 <h2 class="heading">Проєкт LAB</h2>
                 <p>Маркетинг</p>
+                <div class="portfolio-overlay">
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Alias, sapiente!
+                  </p>
+                </div>
               </a>
             </li>
             <li>
@@ -147,6 +196,12 @@
                 />
                 <h2 class="heading">Growing Business</h2>
                 <p>Додаток</p>
+                <div class="portfolio-overlay">
+                  <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Alias, sapiente!
+                  </p>
+                </div>
               </a>
             </li>
           </ul>
