Перша правка + адаптація під мобілку
Зробив правки та додав скролл на список фич, щоб на телефоні вони не випадали

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,129 +79,151 @@
           <ul class="portfolio-list list">
             <li>
               <a href="#" class="link">
-                <img src="./images/portfolio/laptop.jpg" alt="Ноутбук" />
+                <div class="portfolio-thumb">
+                  <img src="./images/portfolio/laptop.jpg" alt="Ноутбук" />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <h2 class="heading">Технокряк</h2>
                 <p>Веб-сайт</p>
-                <div class="portfolio-overlay">
-                  <p>
-                    Ресурс пропонує комплексні пропозиції з різним рівнем
-                    функціоналу та сервісів. Все це дозволить відвідувачу
-                    отримати вичерпні відомості про компанію чи приватну особу.
-                  </p>
-                </div>
               </a>
             </li>
             <li>
               <a href="#" class="link">
-                <img
-                  src="./images/portfolio/basketball.jpg"
-                  alt="Баскетболісти"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio/basketball.jpg"
+                    alt="Баскетболісти"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Alias, sapiente!
+                    </p>
+                  </div>
+                </div>
                 <h2 class="heading">Постер New Orlean vs Golden Star</h2>
                 <p>Дизайн</p>
-                <div class="portfolio-overlay">
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Alias, sapiente!
-                  </p>
-                </div>
               </a>
             </li>
             <li>
               <a href="#" class="link">
-                <img
-                  src="./images/portfolio/resaurant.jpg"
-                  alt="Логотип ресторану"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio/resaurant.jpg"
+                    alt="Логотип ресторану"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Alias, sapiente!
+                    </p>
+                  </div>
+                </div>
                 <h2 class="heading">Ресторан Seafood</h2>
                 <p>Додаток</p>
-                <div class="portfolio-overlay">
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Alias, sapiente!
-                  </p>
-                </div>
               </a>
             </li>
             <li>
               <a href="#" class="link">
-                <img src="./images/portfolio/headphones.jpg" alt="Навушники" />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio/headphones.jpg"
+                    alt="Навушники"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Alias, sapiente!
+                    </p>
+                  </div>
+                </div>
                 <h2 class="heading">Проєкт Prime</h2>
                 <p>Маркетинг</p>
-                <div class="portfolio-overlay">
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Alias, sapiente!
-                  </p>
-                </div>
               </a>
             </li>
             <li>
               <a href="#" class="link">
-                <img src="./images/portfolio/boxes.jpg" alt="Коробки" />
+                <div class="portfolio-thumb">
+                  <img src="./images/portfolio/boxes.jpg" alt="Коробки" />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Alias, sapiente!
+                    </p>
+                  </div>
+                </div>
                 <h2 class="heading">Проєкт Boxes</h2>
                 <p>Додаток</p>
-                <div class="portfolio-overlay">
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Alias, sapiente!
-                  </p>
-                </div>
               </a>
             </li>
             <li>
               <a href="#" class="link">
-                <img src="./images/portfolio/monitor.jpg" alt="Монітор" />
+                <div class="portfolio-thumb">
+                  <img src="./images/portfolio/monitor.jpg" alt="Монітор" />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Alias, sapiente!
+                    </p>
+                  </div>
+                </div>
                 <h2 class="heading">Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
-                <div class="portfolio-overlay">
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Alias, sapiente!
-                  </p>
-                </div>
               </a>
             </li>
             <li>
               <a href="#" class="link">
-                <img src="./images/portfolio/journal.jpg" alt="Журнал" />
+                <div class="portfolio-thumb">
+                  <img src="./images/portfolio/journal.jpg" alt="Журнал" />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Alias, sapiente!
+                    </p>
+                  </div>
+                </div>
                 <h2 class="heading">Видання Limited Edition</h2>
                 <p>Дизайн</p>
-                <div class="portfolio-overlay">
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Alias, sapiente!
-                  </p>
-                </div>
               </a>
             </li>
             <li>
               <a href="#" class="link">
-                <img src="./images/portfolio/label.jpg" alt="Бірка" />
+                <div class="portfolio-thumb">
+                  <img src="./images/portfolio/label.jpg" alt="Бірка" />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Alias, sapiente!
+                    </p>
+                  </div>
+                </div>
                 <h2 class="heading">Проєкт LAB</h2>
                 <p>Маркетинг</p>
-                <div class="portfolio-overlay">
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Alias, sapiente!
-                  </p>
-                </div>
               </a>
             </li>
             <li>
               <a href="#" class="link">
-                <img
-                  src="./images/portfolio/business-laptop.jpg"
-                  alt="Людина працює за ноутбуком"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/portfolio/business-laptop.jpg"
+                    alt="Людина працює за ноутбуком"
+                  />
+                  <div class="portfolio-overlay">
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Alias, sapiente!
+                    </p>
+                  </div>
+                </div>
                 <h2 class="heading">Growing Business</h2>
                 <p>Додаток</p>
-                <div class="portfolio-overlay">
-                  <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Alias, sapiente!
-                  </p>
-                </div>
               </a>
             </li>
           </ul>
